--- a/_includes/covid_notice.html
+++ b/_includes/covid_notice.html
@@ -1,10 +1,9 @@
 <aside class="fixed-top-notice">
     <img src="{{ base_url }}/assets/img/Lux-Logo-small.png" alt="Lux Health Logo" width="200px" height="43.1px" style="display: block; margin: 0 auto;" />
-    <h3 style="text-align: center;">Thank you all for your support and excitement</h3>
+    <h3 style="text-align: center;">Thank you all for your support and desire to use our services</h3>
     <p>We appreciate your active effort to prevent disease and keep you and your family healthy with Lux Health.  We absolutely understand your desire for at-home care.  However, in times like these, we are not technologists or business people.</p>
     <p>We are, first and foremost, health care providers.  We believe we have a greater duty to temporarily focus our service of healing in these trying times.  In light of Novel Coronavirus (COVID-19),
-    <strong>we have decided to pause our medical services through Lux Health to volunteer our expertise and time combating the spread of COVID-19 more directly</strong>.</p>
-    <p>This unfortunately means we will not be available to answer our phones.  <strong>All current appointments are canceled.</strong>  You should have received an email of the notification with a message from our CEO in the last few days.  <Strong>All patients are being called to ensure they are aware of this decision.</strong></p>
+    <strong>we will not be scheduling any more appointments at this time</strong>.  This unfortunately means we will temporarily not be available to answer our phones.</p>
     <p>Do not catastrophize.  This is an opportunity for us as a community to rise up to the challenge and act with our resilience and compassion.</p>
     <p>We look forward to serving you again following this challenge.</p>
 
