--- a/_includes/covid_notice.html
+++ b/_includes/covid_notice.html
@@ -2,8 +2,8 @@
     <img src="{{ base_url }}/assets/img/Lux-Logo-small.png" alt="Lux Health Logo" width="200px" height="43.1px" style="display: block; margin: 0 auto;" />
     <h3 style="text-align: center;">Thank you all for your support and desire to use our services</h3>
     <p>We appreciate your active effort to prevent disease and keep you and your family healthy with Lux Health.  We absolutely understand your desire for at-home care.  However, in times like these, we are not technologists or business people.</p>
-    <p>We are, first and foremost, health care providers.  We believe we have a greater duty to temporarily focus our service of healing in these trying times.  In light of Novel Coronavirus (COVID-19),
-    <strong>we will not be scheduling any more appointments at this time</strong>.  This unfortunately means we will temporarily not be available to answer our phones.</p>
+    <p>We are, first and foremost, health care providers.  We believe we have a greater duty to temporarily reorient our time and service of healing in these trying times.  In light of Novel Coronavirus (COVID-19),
+    <strong>we will not be scheduling any more appointments at this time</strong>.  We will temporarily not be available to answer our phones.</p>
     <p>Do not catastrophize.  This is an opportunity for us as a community to rise up to the challenge and act with our resilience and compassion.</p>
     <p>We look forward to serving you again following this challenge.</p>
 
